feat: move from standalone dependencies to engine
- Move from standalone set of dependencies to engine-provided ones.
This does not remove parts of code that has been reimplemented in
engine from game's codebase - this is to be done later.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "dependencies/raylib"]
-	path = dependencies/raylib
-	url = https://github.com/raysan5/raylib.git
-[submodule "dependencies/fmt"]
-	path = dependencies/fmt
-	url = https://github.com/fmtlib/fmt.git
 [submodule "dependencies/json-c"]
 	path = dependencies/json-c
 	url = https://github.com/json-c/json-c.git
+[submodule "dependencies/engine"]
+	path = dependencies/engine
+	url = https://github.com/moonburnt/engine.git
