dev: include dlls with windows build

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -42,6 +42,8 @@ jobs:
         mkdir ./build
         cmake . -B ./build -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -G Unix\ Makefiles
         cmake --build ./build
+        cp -r /mingw64/bin/{libstdc++-6.dll,libgcc_s_seh-1.dll,libwinpthread-1.dll}\
+              ./build/game
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
