feat: add logo to main menu
- Add WIP logo to main menu screen.
- Fix engine url in gitmodules to support working over ssh.
- Comment out excessive debug flags in CMakeLists.txt - these should be
added automatically by cmake itself, if config is set to Debug.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ if (CMAKE_BUILD_TYPE STREQUAL "Release")
     add_definitions(-O2)
 else()
     message("---- DEBUG MODE ----")
-    add_definitions(-DDEBUG -O0 -g)
+    #add_definitions(-DDEBUG -O0 -g)
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
