--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "dependencies/engine"]
 	path = dependencies/engine
-	url = https://github.com/moonburnt/engine.git
+	url = git@github.com:moonburnt/engine.git
