--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build
       run: |
         mkdir ./build
-        cmake . -B ./build
+        cmake . -B ./build -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -G Unix\ Makefiles
         cmake --build ./build
 
     - name: Upload Artifacts
