--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -12,15 +12,6 @@ jobs:
         arch: [x86_64]
 
     steps:
-    - name: Install MSYS2 and Dependencies
-      uses: msys2/setup-msys2@v2
-      with:
-        update: true
-        install: >-
-          mingw-w64-x86_64-cmake mingw-w64-x86_64-clang mingw-w64-x86_64-freetype
-          make
-        path-type: inherit
-
     - name: Checkout Submodules
       uses: actions/checkout@v2
       with:
@@ -29,21 +20,19 @@ jobs:
         lfs: true
 
     - name: Checkout LFS objects
-      shell: msys2 {0}
+      shell: bash
       run: git lfs checkout
 
     - name: Update Engine Submodules
-      shell: msys2 {0}
+      shell: bash
       run: git -C dependencies/engine submodule update --init
 
     - name: Build
-      shell: msys2 {0}
+      shell: bash
       run: |
         mkdir ./build
-        cmake . -B ./build -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++ -G Unix\ Makefiles
+        cmake . -B ./build -DCMAKE_BUILD_TYPE=Release
         cmake --build ./build
-        cp -r /mingw64/bin/{libstdc++-6.dll,libgcc_s_seh-1.dll,libwinpthread-1.dll}\
-              ./build/game
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
