Add compilation with address sanitizer in Debug mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,11 @@ target_sources(Game PRIVATE
 target_compile_options(Game PRIVATE
     $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:-Wall -Wextra -Wpedantic -Werror -Wextra-semi -Wsuggest-override -Wno-missing-field-initializers>
     $<$<CXX_COMPILER_ID:MSVC>:/Wall /w34263 /w34266>
+    $<$<AND:$<CONFIG:Debug>,$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>>:-fsanitize=address>
 )
+
+target_link_options(Game PRIVATE
+    $<$<AND:$<CONFIG:Debug>,$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>>:-fsanitize=address>)
 
 if (CMAKE_SYSTEM_NAME STREQUAL "Windows" OR CMAKE_SYSTEM_NAME STREQUAL "Linux")
     # Custom command to be used after Game is built
