--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -30,8 +30,8 @@ jobs:
       shell: bash
       run: |
         mkdir ./build
-        cmake . -B ./build -DCMAKE_BUILD_TYPE=Release
-        cmake --build ./build
+        cmake . -B ./build
+        cmake --build ./build --config Release
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
